# LinguAalayam

./: .gitattributes  .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: d0e4ebf54ede_update_word_column_as_non_nullable_to_.py  d35f9d08f57b_add_alphabet_url_word_url_and_word_.py  d9da4a7bb619_add_word_column_as_nullable_to_word_.py
data/: all_words_per_alphabet_df.csv  no_definition_df.csv
data/datuk/files/: datuk
data/enml/files/: enml
data/raw/: ml_df.csv
data/raw/samam/: glossary_df.csv
data/raw/word_urls/: word-ം.csv  word-ഃ.csv  word-അ.csv  word-ആ.csv  word-ഇ.csv  word-ഈ.csv  word-ഉ.csv  word-ഊ.csv  word-ഋ.csv  word-ഌ.csv  word-എ.csv  word-ഏ.csv  word-ഐ.csv  word-ഒ.csv  word-ഓ.csv  word-ഔ.csv  word-ക.csv  word-ഖ.csv  word-ഗ.csv  word-ഘ.csv  word-ങ.csv  word-ച.csv  word-ഛ.csv  word-ജ.csv  word-ഝ.csv  word-ഞ.csv  word-ട.csv  word-ഠ.csv  word-ഡ.csv  word-ഢ.csv  word-ണ.csv  word-ത.csv  word-ഥ.csv  word-ദ.csv  word-ധ.csv  word-ന.csv  word-പ.csv  word-ഫ.csv  word-ബ.csv  word-ഭ.csv  (+14 more)
lingua/app/: data_reviewer.py
lingua/data/: data_extractor.py  samam_test_data_extractor.py  url_scrapper.py  wiktionary_train_data_extractor.py
lingua/database/: crud.py  db_setup.py  models.py
notebooks/: dataload.ipynb  preprocess.ipynb  trainer.ipynb
