[tool.poetry]
name = "linguaalayam"
version = "0.1.0"
description = ""
authors = ["Sachin Nandakumar <zaksaiplayground@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
sentence-transformers = "^4.1.0"
datasets = "^3.5.0"
playwright = "^1.52.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
