[tool.poetry]
name = "lingua"
version = "0.1.0"
description = ""
authors = ["Sachin Nandakumar <zaksaiplayground@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
sentence-transformers = "^4.1.0"
datasets = "^3.5.0"
playwright = "^1.52.0"
nest-asyncio = "^1.6.0"
parsel = "^1.10.0"
streamlit = "^1.45.0"
sqlalchemy = "^2.0.40"
python-dotenv = "^1.1.0"
psycopg2-binary = "^2.9.10"
alembic = "^1.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
build-db = "lingua.database.db_setup:init_db"
url-scrapper = "lingua.data.url_scrapper:main"
extract-wiktionary-data = "lingua.data.wiktionary_train_data_extractor:main"